--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payroll Calculator</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="icon" href="data:,">
   </head>
   <body>
     <script type="importmap">
@@ -23,6 +24,6 @@
       }
     </script>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
