--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         "imports": {
           "@google/genai": "https://esm.sh/@google/genai@^0.7.0",
           "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.44.4",
-          "react": "https://esm.sh/react@^19.0.0",
-          "react/": "https://esm.sh/react@^19.0.0/",
-          "react-dom/": "https://esm.sh/react-dom@^19.0.0/",
+          "react": "https://esm.sh/react@^18.2.0",
+          "react/": "https://esm.sh/react@^18.2.0/",
+          "react-dom": "https://esm.sh/react-dom@^18.2.0",
+          "react-dom/": "https://esm.sh/react-dom@^18.2.0/",
           "xlsx": "https://esm.sh/xlsx@^0.18.5",
           "vite": "https://aistudiocdn.com/vite@^7.1.5",
           "path": "https://aistudiocdn.com/path@^0.12.7",
